--- a/.gitignore
+++ b/.gitignore
@@ -363,4 +363,85 @@ FodyWeavers.xsd
 
 # FFXIV/Dalamud specific
 *.dll
-!packages.lock.json 
+!packages.lock.json
+
+# Visual Studio
+.vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Bb]in/
+[Oo]bj/
+*.exe
+*.dll
+*.app
+*.log
+*.cache
+*.pdb
+*.mdb
+*.db
+*.db-shm
+*.db-wal
+*.sdf
+*.ipch
+*.aps
+*.ncb
+*.opendb
+*.VC.db
+*.VC.VC.opendb
+
+# NuGet
+*.nupkg
+# The packages folder can be ignored because of Package Restore
+packages/
+# except build/, which is used as an MSBuild target.
+!build/
+# Uncomment if you have tasks that create the project's static files in wwwroot
+#wwwroot/
+
+# Rider
+.idea/
+*.sln.iml
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Mono Auto Generated Files
+mono_crash.*
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# VS Code
+.vscode/
+
+# Others
+*.zip
+*.7z
+*.tar
+*.gz
+*.rar
+*.tmp
+*.bak
+*.swp
+*.DS_Store
+
+# Plugin specific
+AetherFM.zip
+
+# Ignore lock file if not needed
+packages.lock.json 
