--- a/AetherFM.csproj
+++ b/AetherFM.csproj
@@ -11,6 +11,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>AetherFM</RootNamespace>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
