--- a/AetherFM.csproj
+++ b/AetherFM.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Dalamud.NET.Sdk/12.0.2">
 
   <PropertyGroup>
-<TargetFramework>net9.0</TargetFramework>    <OutputType>Library</OutputType>
+    <TargetFramework>net9.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <RootNamespace>AetherFM</RootNamespace>
     <AssemblyName>AetherFM</AssemblyName>
     <Version>1.0.0</Version>
@@ -9,10 +10,26 @@
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
+  </ItemGroup>
+
+  <!-- Copy plugin files to output directory -->
+  <ItemGroup>
+    <Content Include="AetherFM.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="Data\stations.rsd" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="images\**\*" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <!-- Hide data files from Visual Studio -->
+  <ItemGroup>
+    <Content Include="Data\stations.rsd">
+      <Visible>false</Visible>
+    </Content>
   </ItemGroup>
 
 </Project>
